c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/address_of_address.c
/* The result of the & operator is not an lvalue,
 * so it's illegal to take its address
 */
int main(void) {
    int x = 0;
    int *y = &x;
    int **z = &(&x);
    return 0;
}